[package]
name = "abc004"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc004-a",problem = {platform = "atcoder",contest = "abc004",index = "A"}}
b = {name = "abc004-b",problem = {platform = "atcoder",contest = "abc004",index = "B"}}
c = {name = "abc004-c",problem = {platform = "atcoder",contest = "abc004",index = "C"}}
d = {name = "abc004-d",problem = {platform = "atcoder",contest = "abc004",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc004-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc004-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc004-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc004-d"
path = "./src/bin/d.rs"
