[package]
name = "abc006"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc006-a",problem = {platform = "atcoder",contest = "abc006",index = "A"}}
b = {name = "abc006-b",problem = {platform = "atcoder",contest = "abc006",index = "B"}}
c = {name = "abc006-c",problem = {platform = "atcoder",contest = "abc006",index = "C"}}
d = {name = "abc006-d",problem = {platform = "atcoder",contest = "abc006",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc006-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc006-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc006-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc006-d"
path = "./src/bin/d.rs"
