[package]
name = "abc007"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc007-a",problem = {platform = "atcoder",contest = "abc007",index = "A"}}
b = {name = "abc007-b",problem = {platform = "atcoder",contest = "abc007",index = "B"}}
c = {name = "abc007-c",problem = {platform = "atcoder",contest = "abc007",index = "C"}}
d = {name = "abc007-d",problem = {platform = "atcoder",contest = "abc007",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc007-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc007-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc007-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc007-d"
path = "./src/bin/d.rs"
