[package]
name = "abc008"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc008-a",problem = {platform = "atcoder",contest = "abc008",index = "A"}}
b = {name = "abc008-b",problem = {platform = "atcoder",contest = "abc008",index = "B"}}
c = {name = "abc008-c",problem = {platform = "atcoder",contest = "abc008",index = "C"}}
d = {name = "abc008-d",problem = {platform = "atcoder",contest = "abc008",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc008-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc008-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc008-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc008-d"
path = "./src/bin/d.rs"
