[package]
name = "abc011"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc011-a",problem = {platform = "atcoder",contest = "abc011",index = "A"}}
b = {name = "abc011-b",problem = {platform = "atcoder",contest = "abc011",index = "B"}}
c = {name = "abc011-c",problem = {platform = "atcoder",contest = "abc011",index = "C"}}
d = {name = "abc011-d",problem = {platform = "atcoder",contest = "abc011",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc011-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc011-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc011-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc011-d"
path = "./src/bin/d.rs"
