[package]
name = "abc013"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc013-a",problem = {platform = "atcoder",contest = "abc013",index = "A"}}
b = {name = "abc013-b",problem = {platform = "atcoder",contest = "abc013",index = "B"}}
c = {name = "abc013-c",problem = {platform = "atcoder",contest = "abc013",index = "C"}}
d = {name = "abc013-d",problem = {platform = "atcoder",contest = "abc013",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc013-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc013-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc013-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc013-d"
path = "./src/bin/d.rs"
