[package]
name = "abc014"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc014-a",problem = {platform = "atcoder",contest = "abc014",index = "A"}}
b = {name = "abc014-b",problem = {platform = "atcoder",contest = "abc014",index = "B"}}
c = {name = "abc014-c",problem = {platform = "atcoder",contest = "abc014",index = "C"}}
d = {name = "abc014-d",problem = {platform = "atcoder",contest = "abc014",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc014-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc014-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc014-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc014-d"
path = "./src/bin/d.rs"
