[package]
name = "abc015"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc015-a",problem = {platform = "atcoder",contest = "abc015",index = "A"}}
b = {name = "abc015-b",problem = {platform = "atcoder",contest = "abc015",index = "B"}}
c = {name = "abc015-c",problem = {platform = "atcoder",contest = "abc015",index = "C"}}
d = {name = "abc015-d",problem = {platform = "atcoder",contest = "abc015",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc015-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc015-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc015-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc015-d"
path = "./src/bin/d.rs"
