[package]
name = "abc019"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc019-a",problem = {platform = "atcoder",contest = "abc019",index = "A"}}
b = {name = "abc019-b",problem = {platform = "atcoder",contest = "abc019",index = "B"}}
c = {name = "abc019-c",problem = {platform = "atcoder",contest = "abc019",index = "C"}}
d = {name = "abc019-d",problem = {platform = "atcoder",contest = "abc019",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc019-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc019-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc019-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc019-d"
path = "./src/bin/d.rs"
