[package]
name = "abc020"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc020-a",problem = {platform = "atcoder",contest = "abc020",index = "A"}}
b = {name = "abc020-b",problem = {platform = "atcoder",contest = "abc020",index = "B"}}
c = {name = "abc020-c",problem = {platform = "atcoder",contest = "abc020",index = "C"}}
d = {name = "abc020-d",problem = {platform = "atcoder",contest = "abc020",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc020-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc020-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc020-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc020-d"
path = "./src/bin/d.rs"
