[package]
name = "abc024"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc024-a",problem = {platform = "atcoder",contest = "abc024",index = "A"}}
b = {name = "abc024-b",problem = {platform = "atcoder",contest = "abc024",index = "B"}}
c = {name = "abc024-c",problem = {platform = "atcoder",contest = "abc024",index = "C"}}
d = {name = "abc024-d",problem = {platform = "atcoder",contest = "abc024",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc024-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc024-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc024-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc024-d"
path = "./src/bin/d.rs"
