[package]
name = "abc027"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc027-a",problem = {platform = "atcoder",contest = "abc027",index = "A"}}
b = {name = "abc027-b",problem = {platform = "atcoder",contest = "abc027",index = "B"}}
c = {name = "abc027-c",problem = {platform = "atcoder",contest = "abc027",index = "C"}}
d = {name = "abc027-d",problem = {platform = "atcoder",contest = "abc027",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc027-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc027-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc027-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc027-d"
path = "./src/bin/d.rs"
