[package]
name = "abc028"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc028-a",problem = {platform = "atcoder",contest = "abc028",index = "A"}}
b = {name = "abc028-b",problem = {platform = "atcoder",contest = "abc028",index = "B"}}
c = {name = "abc028-c",problem = {platform = "atcoder",contest = "abc028",index = "C"}}
d = {name = "abc028-d",problem = {platform = "atcoder",contest = "abc028",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc028-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc028-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc028-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc028-d"
path = "./src/bin/d.rs"
