[package]
name = "abc032"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc032-a",problem = {platform = "atcoder",contest = "abc032",index = "A"}}
b = {name = "abc032-b",problem = {platform = "atcoder",contest = "abc032",index = "B"}}
c = {name = "abc032-c",problem = {platform = "atcoder",contest = "abc032",index = "C"}}
d = {name = "abc032-d",problem = {platform = "atcoder",contest = "abc032",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc032-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc032-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc032-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc032-d"
path = "./src/bin/d.rs"
