[package]
name = "abc035"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc035-a",problem = {platform = "atcoder",contest = "abc035",index = "A"}}
b = {name = "abc035-b",problem = {platform = "atcoder",contest = "abc035",index = "B"}}
c = {name = "abc035-c",problem = {platform = "atcoder",contest = "abc035",index = "C"}}
d = {name = "abc035-d",problem = {platform = "atcoder",contest = "abc035",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc035-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc035-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc035-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc035-d"
path = "./src/bin/d.rs"
