[package]
name = "abc036"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc036-a",problem = {platform = "atcoder",contest = "abc036",index = "A"}}
b = {name = "abc036-b",problem = {platform = "atcoder",contest = "abc036",index = "B"}}
c = {name = "abc036-c",problem = {platform = "atcoder",contest = "abc036",index = "C"}}
d = {name = "abc036-d",problem = {platform = "atcoder",contest = "abc036",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc036-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc036-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc036-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc036-d"
path = "./src/bin/d.rs"
