[package]
name = "abc038"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc038-a",problem = {platform = "atcoder",contest = "abc038",index = "A"}}
b = {name = "abc038-b",problem = {platform = "atcoder",contest = "abc038",index = "B"}}
c = {name = "abc038-c",problem = {platform = "atcoder",contest = "abc038",index = "C"}}
d = {name = "abc038-d",problem = {platform = "atcoder",contest = "abc038",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc038-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc038-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc038-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc038-d"
path = "./src/bin/d.rs"
